--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  <script src="/static/js/jquery-3.2.1.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
 </head>
 <body>
   <h1>Hello, world!</h1>
